@@ -1,10 +1,11 @@
 <? if( !ZT_DEFINED ) { die("Illegal Access"); } ?>
 
+
+  </td></tr></table>
    
 
    <!--- BEGIN FOOTER --->
    
-   </td></tr></table>
   
   </td>
   </tr>
