@@ -13,7 +13,18 @@ abstraction, and endless possibilities for project expansion.
 
 ----- VERSION 2.6 (development) -----
 
+2005-10-21, kato
+  Simplified CSS attributes for menubox
+  Added menubox to login page
+
 ----- VERSION 2.6.PRE2 (development)--
+
+2005-10-21, kato
+  Fixed permissions on contact panel
+    - zentrack_2/includes/templates/ticket_load_contacts 1.6
+  
+  Fixed error when a ticket tab is not visible
+    - zentrack_2/includes/templates/ticket_tabs.php 1.7
 
 2005-10-21, cfalonso
   Fixed an exception thrown when no tickets were found in the search
